# gesture_ws

src/ads1263_reader/: package.xml  setup.cfg  setup.py
src/ads1263_reader/ads1263_reader/: ADS1263.py  config.py  semg_reader_node.py
src/gesture_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/gesture_msgs/msg/: HandCommand.msg  HandGesture.msg
src/gesture_publisher/: package.xml  setup.cfg  setup.py
src/gesture_publisher/gesture_publisher/: gesture_automatedsequenceTest_publisher.py  gesture_command_publisher.py  gesture_publisher_node.py  manual_gesture_publisher.py
src/gesture_subscriber/: package.xml  setup.cfg  setup.py
src/gesture_subscriber/gesture_subscriber/: gesture_subscriber_node.py  gesture_subscriber_node_old.py
src/semg_trainer/: package.xml  setup.cfg  setup.py
src/semg_trainer/semg_trainer/: semg_svm_trainer.py
