<?xml version="1.0"?>
<package format="3">
  <name>gesture_msgs</name>
  <version>0.0.1</version>
  <description>Custom message definitions for hand gesture control</description>
  <maintainer email="nader.allam@mail.utoronto.ca">Nader</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Required for generating messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- If your message uses std_msgs (e.g., std_msgs/String), include this -->
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

