<?xml version="1.0"?>
<package format="3">
  <name>gesture_subscriber</name>
  <version>0.1.0</version>
  <description>ROS2 node that subscribes to HandCommand messages for gesture-based robot teleoperation.</description>

  <maintainer email="nader.allam@mail.utoronto.ca">Nader</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>gesture_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

